@@ -41,8 +41,8 @@ public class ADLPlotcom extends WidgetPart {
     @Override
     public Object[] getChildren() {
         Object[] ret = new Object[5];
-        ret[0] = new ADLResource(ADLResource.FOREGROUND_COLOR, new Integer(_clr));
-        ret[1] = new ADLResource(ADLResource.BACKGROUND_COLOR, new Integer(_bclr));
+        ret[0] = new ADLResource(ADLResource.FOREGROUND_COLOR, Integer.valueOf(_clr));
+        ret[1] = new ADLResource(ADLResource.BACKGROUND_COLOR, Integer.valueOf(_bclr));
         ret[2] = new ADLResource(ADLResource.CHANNEL, title);
         ret[3] = new ADLResource(ADLResource.PLOT_XLABEL, xLabel);
         ret[4] = new ADLResource(ADLResource.PLOT_YLABEL, yLabel);
@@ -85,6 +85,8 @@ public class ADLPlotcom extends WidgetPart {
                 }else if(FileLine.argEquals(row[0], "bclr")){ //$NON-NLS-1$
                     set_bclr(FileLine.getIntValue(row[1]));
                     set_isBackColorDefined(true);
+                }else if(FileLine.argEquals(row[0], "package")){ //$NON-NLS-1$
+                    // Ignore
                 }else {
                      throw new WrongADLFormatException(Messages.ADLObject_WrongADLFormatException_Parameter_Begin+fileLine+Messages.ADLObject_WrongADLFormatException_Parameter_End);
                 }
